# UtsuhoVania

./: .gitignore  CMakeLists.txt  Player.cpp  Player.h  README.md  Tile.cpp  Tile.h  TileActor.cpp  TileActor.h  TileActorMediator.cpp  TileActorMediator.h  TilePlatformerApp.cpp  TilePlatformerApp.h  TileScreen.cpp  TileScreen.h  main.cpp  makefile  utsuho.cpp  utsuho.h
Resources/: .gitignore  Manifest  saveFileMockup.map
events/: .gitignore  CMakeLists.txt  UtsuhoGameEvent.cpp  UtsuhoGameEvent.h  UtsuhoGameEvent_test.cpp
gtest/: .gitignore
mobile_entities/: CMakeLists.txt  MobileEntity.cpp  MobileEntity.h  PlatformerScreen.cpp  PlatformerScreen.h  PlayerEntity.cpp  PlayerEntity.h  UtsuhoMobile_test.cpp
